Fix OOPIFs on Android

RenderWidgetHostViewAndroid / DelegatedFrameHostAndroid don't
participate correctly in unified begin frame.  They listen to
vsync messages from the window android themselves and then
send begin frames to the renderer.

This patch hooks up RWHVA into the surface client namespace hierarchy in
surface manager by registering its client id and its association with
the CompositorImpl's client id.  Because RenderWidgetHostViewChildFrame
attaches itself to the RWHVAndroid's client id, this allows child frames
to get the begin frame sources that they need to drive themselves.

In the future, RWHVAs will no longer be WindowAndroidObservers
and will instead get their begin frame source via the surface manager.
However, thorny issues around begin frame source pausing need to be
addressed first before this can be removed.  So, this patch is only
a halfway step to make sure that begin frames flow from
CompositorImpl -> RWHVAndroid -> RWHVChildFrame even if
RWHVAndroid ignores it and uses its own.

OOPIFs were broken when begin frame scheduling was turned on in
https://codereview.chromium.org/1939253002.  Because the child frames
weren't hooked up to the surface hierarchy, they never got a begin frame
source, never ticked, and thus never rendered at all.

BUG=621835

Review-Url: https://codereview.chromium.org/2369643002
Cr-Commit-Position: refs/heads/master@{#422193}

Former-commit-id: a487a27cc88695723d102e43592b14a5958ad4e3