content/browser/renderer_host/compositor_impl_android.h
@@ -119,6 +119,8 @@ class CONTENT_EXPORT CompositorImpl
   void OnVSync(base::TimeTicks frame_time,
                base::TimeDelta vsync_period) override;
   void SetNeedsAnimate() override;
+  uint32_t GetSurfaceClientId() override;
+
   void SetVisible(bool visible);
   void CreateLayerTreeHost();
 
